--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,7 @@
 <resources>
     <string name="app_name">Municipalidad Provincial de Huaura</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_settings">Settings</string>
     <string name="RegistroCivil">Registro Civil</string>
     <string name="CajaCentral">Caja Central</string>
@@ -11,9 +9,8 @@
     <string name="idioma">Idioma</string>
     <string name="Configuraciones">Configuraciones</string>
     <string name="btnRCConsulta">Consulta Registro Civil</string>
-
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="consultarPago">Consultar Pago</string>
+    <string name="consultarPago">Consulta Pago</string>
     <string name="IngreseCodigo">Ingrese Codigo...</string>
     <string name="Buscar">Buscar</string>
     <string name="muniHuaura" translatable="false">Municipalidad Provincial de Huaura</string>
@@ -56,4 +53,21 @@
     <string name="fechaDefunc">Fecha de defuncion</string>
     <string name="fechainscripcion">Fecha de inscripcion</string>
     <string name="escojeOpcion">Escoje una Opcion</string>
+    <string name="ingNumeroPlacaPadron">Ingrese N° placa o N° Padron</string>
+    <string name="placa">Placa</string>
+    <string name="padron">Padrón</string>
+    <string name="certOperacion">Certificado de Operacion</string>
+    <string name="dni">Dni</string>
+    <string name="apell">Apellidos</string>
+    <string name="empre">Empresa</string>
+    <string name="servi">Servicio</string>
+    <string name="clase">Clase</string>
+    <string name="motor">Motor</string>
+    <string name="serie">Serie</string>
+    <string name="fechaEmision">Fecha de Emisión</string>
+    <string name="fechaCaducidad">Fecha de Caducidad</string>
+    <string name="operVehiculo">Consulta Operación Vehículo</string>
+    <string name="papeletas">Consulta Papeletas</string>
+    <string name="ingPapeletas">Ingrese DNI o N°de papeleta</string>
+    <string name="ingOperacionVehiculo">Ingrese el N° de placa o el N° de padrón</string>
 </resources>
